# noshow-iq-40000

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  smoke_test.py  train_model.py
.github/workflows/: ci-cd.yml  lint.yml
noshow_iq/: api.py  model.py  preprocess.py
tests/: test_noshow.py
