[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noshow-iq-jazibnoel"
version = "0.1.0"
description = "A prediction API for medical appointment no-shows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "scikit-learn",
    "imbalanced-learn",
    "joblib",
    "pymongo",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["noshow_iq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]